--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "cookie-session": "^1.4.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "method-override": "^3.0.0"
+    "method-override": "^3.0.0",
+    "time-stamp": "^2.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
